# QuickColorPickerTool-CymriseColorPicker

./: .gitignore  CHANGELOG.md  ColorEventArgs.cs  ColorPreviewEventArgs.cs  CymriseColorPicker.csproj  LICENSE  MainForm.Designer.cs  MainForm.cs  OverlayForm.cs  PickerLensForm.cs  Program.cs  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v1.2.4.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  app.manifest  release-request-v1.2.3.txt  release-request-v1.2.4.txt  release-request-v1.3.0.txt  release-request-v1.3.1.txt  release-trigger-v1.2.2-compilefix.md  release-trigger-v1.2.2-diagnostics.md  release-trigger-v1.2.2-rerun.md  release-trigger-v1.2.2.md
.github/workflows/: build.yml  merge-release.yml  release.yml
diagnostics/: ConnectorProbe.cs  NativeInteropProbe.cs  connector-write-probe.md
docs/: v1.1.0-audit.md
native/: CMakeLists.txt
native/resources/: app.rc
native/src/: entry.cpp  main.cpp  main_native.cpp  ui_texts.h
